update nest form

--- a/app/views/admin/forms/_field_fields.html.erb
+++ b/app/views/admin/forms/_field_fields.html.erb
@@ -8,11 +8,11 @@
   <tbody>
     <%= f.simple_fields_for :fields, wrapper: false do |ff| %>
       <tr class="fields">
-        <td><%= ff.input :name, label: false %></td>
-        <td><%= ff.input :type, label: false %></td>
-        <td><%= ff.input :required, label: false %></td>
-        <td><%= ff.input :multiple, label: false %></td>
-        <td><%= ff.input :options, label: false %></td>
+        <td><%= ff.input_field :name, label: false %></td>
+        <td><%= ff.input_field :type, label: false %></td>
+        <td><%= ff.input_field :required, label: false %></td>
+        <td><%= ff.input_field :multiple, label: false %></td>
+        <td><%= ff.input_field :options, label: false %></td>
         <td><%= ff.link_to_remove 'remove' %></td>
       </tr>
     <% end %>
