--- a/app/views/admin/forms/_field_fields.html.erb
+++ b/app/views/admin/forms/_field_fields.html.erb
@@ -2,19 +2,19 @@
 <table id="fields" class="table">
   <thead>
     <tr>
-      <%= th_for Field, :name, :type, :required, :multiple, :options %>
       <th></th>
+      <%= th_for Field, :name, :type, :required, :multiple, :options %>
     </tr>
   </thead>
   <tbody>
     <%= f.simple_fields_for :fields, wrapper: false do |ff| %>
       <tr class="fields">
+        <td><%= ff.link_to_remove content_tag(:span, nil, class: 'glyphicon glyphicon-trash') %></td>
         <td><%= ff.input_field :name, label: false %></td>
         <td><%= ff.input_field :type, label: false, include_blank: false %></td>
         <td><%= ff.input_field :required, label: false %></td>
         <td><%= ff.input_field :multiple, label: false %></td>
-        <td><%= ff.input_field :options, label: false %></td>
-        <td><%= ff.link_to_remove content_tag(:span, nil, class: 'glyphicon glyphicon-trash') %></td>
+        <td class="col-sm-6"><%= ff.input_field :options, as: :string, label: false, class: 'select2-tags-array', data: {init: ff.object.options.to_json} %></td>
       </tr>
     <% end %>
   </tbody>
