--- a/app/views/admin/attendees/show.html.erb
+++ b/app/views/admin/attendees/show.html.erb
@@ -8,6 +8,6 @@
   </tbody>
 </table>
 <div class="btn-group">
-  <%= link_to t('crud.edit'), edit_admin_attendee_path(@admin_attendee), class: 'btn btn-info btn-lg' %>
-  <%= link_to t('action.back'), admin_attendees_path, class: 'btn btn-default btn-lg' %>
+  <%= link_to t('crud.edit'), edit_admin_form_attendee_path(@admin_form, @admin_attendee), class: 'btn btn-info btn-lg' %>
+  <%= link_to t('action.back'), admin_form_attendees_path, class: 'btn btn-default btn-lg' %>
 </div>
