--- a/app/views/admin/attendees/_form.html.erb
+++ b/app/views/admin/attendees/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@admin_attendee, wrapper: :horizontal_form, html: {class: 'form-horizontal'}) do |f| %>
+<%= simple_form_for(@admin_attendee, url: [:admin, @admin_form.becomes(Form), @admin_attendee.becomes(Attendee)], wrapper: :horizontal_form, html: {class: 'form-horizontal'}) do |f| %>
 
   <div class="form-inputs">
     <div class="form-group">
