--- a/app/views/admin/attendees/new.html.erb
+++ b/app/views/admin/attendees/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 <hr>
-<%= link_to t('action.back'), admin_attendees_path, class: 'btn btn-default btn-lg' %>
+<%= link_to t('action.back'), [@admin_form, Attendee], class: 'btn btn-default btn-lg' %>
