--- a/app/views/admin/attendees/show.html.erb
+++ b/app/views/admin/attendees/show.html.erb
@@ -5,8 +5,15 @@
   </thead>
   <tbody>
     <%= tr_for @admin_attendee, :id, %i[user email], %i[form title] %>
+    <% @admin_form.fields.each do |field| %>
+      <tr>
+        <td><%= field.name %></td>
+        <td><%= field.value_of(@admin_attendee).try(:value) %></td>
+      </tr>
+    <% end %>
   </tbody>
 </table>
+
 <div class="btn-group">
   <%= link_to t('crud.edit'), edit_admin_form_attendee_path(@admin_form, @admin_attendee), class: 'btn btn-info btn-lg' %>
   <%= link_to t('action.back'), admin_form_attendees_path, class: 'btn btn-default btn-lg' %>
