--- a/app/views/forms/index.html.erb
+++ b/app/views/forms/index.html.erb
@@ -1,3 +1,5 @@
+<% if user_signed_in? %><p>Hi! <%= current_user.email %></p><% end %>
+
 <div class="page-header">
   <h1><%= Form.model_name.human %></h1>
 </div>
